// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare.php - php-verify: declare.php 1`] = `
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php
          $a = 1;
        ?>
    </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php $a = 1; ?>
    </body>
</html>

`;

exports[`inline.php - php-verify: inline.php 1`] = `
<?php

function inline() {
    ?>
    <span>Hello World!</span>
    <?php
}

function inline1() {
    ?><span>Hello World!</span>
    <?php
}

function inline2() {
    ?>
    <span>Hello World!</span><?php
}

function inlineInOneLine() {
    ?><span>Hello World!</span><?php
}

function inlineNested() {
    ?>
    <div>
      <span>Hello World!</span>
    </div>
    <?php
}

function inlineNested1() {
    ?><div>
    <span>Hello World!</span>
    </div><?php
}

function inlineMultipleStatements() {
    $a = 1;
    ?>
    <span>Hello World!</span>
    <?php
    $b = 1;
    ?>
    <span>Hello World!</span>
    <?php
    $c = 1;
}

function test() {
  ?>
  <span>Hello World!</span>
  <?php
  $a = 1;
  $b = 1;
  $c = 1;
}

function otherTest()
{
    echo '1';
    ?>
      <div>
        <div>
          <div>
            <?php echo '2'; ?>
            <div>
            <?php
            echo '3';
            echo '4';
            echo '5';
            ?>
            </div>
          </div>
        </div>
      </div>
    <?php
    echo '6';
}

function fff()
{
    ?>
    <div>
      <div>
      <?php
      function ffff()
      {
          ?>
          <div>
            <div>
              <?php echo 'test'; ?>
            </div>
          </div>
          <?php
      }
      ?>
      </div>
    </div>
    <?php
}

function ffff()
{
  echo '1';
  echo '2';
  echo '3';
  echo '4';
  ?>
  <div>foo</div>
  <?php
  echo '5';
  echo '6';
  echo '7';
  echo '8';
}

function fffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
    <div>
      <div>
        <div>
          <?php
          echo 'nested';
          echo 'nested';
          echo 'nested';
          ?>
        </div>
      </div>
    </div>
    <?php
    echo '5';
    echo '6';
    echo '7';
    echo '8';
}

function ffffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
      <div>
        <div>
          <div>
            <div>
                <?php
                function ffffff() {
                    echo '1';
                    echo '2';
                    echo '3';
                    echo '4';
                    ?>
                    <div>FooBar</div>
                    <?php
                    echo '5';
                    echo '6';
                    echo '7';
                    echo '8';
                }
                ?>
            </div>
          </div>
        </div>
      </div>
    <?php
    echo '5';
    echo '6';
    echo '7';
    echo '8';
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

function inline()
{
    ?>
    <span>Hello World!</span>
    <?php
}

function inline1()
{
    ?><span>Hello World!</span>
    <?php
}

function inline2()
{
    ?>
    <span>Hello World!</span><?php
}

function inlineInOneLine()
{
    ?><span>Hello World!</span><?php
}

function inlineNested()
{
    ?>
    <div>
      <span>Hello World!</span>
    </div>
    <?php
}

function inlineNested1()
{
    ?><div>
    <span>Hello World!</span>
    </div><?php
}

function inlineMultipleStatements()
{
    $a = 1; ?>
    <span>Hello World!</span>
    <?php $b = 1; ?>
    <span>Hello World!</span>
    <?php $c = 1;
}

function test()
{
    ?>
  <span>Hello World!</span>
  <?php
  $a = 1;
  $b = 1;
  $c = 1;
}

function otherTest()
{
    echo '1'; ?>
      <div>
        <div>
          <div>
            <?php echo '2'; ?>
            <div>
            <?php
            echo '3';
            echo '4';
            echo '5';
            ?>
            </div>
          </div>
        </div>
      </div>
    <?php echo '6';
}

function fff()
{
    ?>
    <div>
      <div>
      <?php function ffff()
      {
          ?>
          <div>
            <div>
              <?php echo 'test'; ?>
            </div>
          </div>
          <?php
      } ?>
      </div>
    </div>
    <?php
}

function ffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
  <div>foo</div>
  <?php
  echo '5';
  echo '6';
  echo '7';
  echo '8';
}

function fffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
    <div>
      <div>
        <div>
          <?php
          echo 'nested';
          echo 'nested';
          echo 'nested';
          ?>
        </div>
      </div>
    </div>
    <?php
    echo '5';
    echo '6';
    echo '7';
    echo '8';
}

function ffffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
      <div>
        <div>
          <div>
            <div>
                <?php function ffffff()
                {
                    echo '1';
                    echo '2';
                    echo '3';
                    echo '4';
                    ?>
                    <div>FooBar</div>
                    <?php
                    echo '5';
                    echo '6';
                    echo '7';
                    echo '8';
                } ?>
            </div>
          </div>
        </div>
      </div>
    <?php
    echo '5';
    echo '6';
    echo '7';
    echo '8';
}

`;

exports[`mixed.php - php-verify: mixed.php 1`] = `
<p>Test.</p>
<?php echo 'String.'; ?>
<p>Test.</p>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php echo '<input type="hidden" value="' . htmlspecialchars($data) . '" />'; ?>
<div></div>
<?php
echo 'foo';
echo 'bar';
?>
<div class="<?php echo $class; ?>"></div>
<div>
  <h1>
    <?php print_welcome_message(); ?>
  </h1>
</div>
<div id="results">
  <table class="sortable">
    <?php $results = $statement->fetchAll(PDO::FETCH_ASSOC); ?>
    <?php do { ?>
      <tr>
        <?php for ($i = 0; $i < count($columns); $i++): ?>
          <td><?php echo $row[$i] ?></td>
        <?php endfor; ?>
      </tr>
    <?php } while (($row = next($results)) != false); ?>
  </table>
</div>
<div id="results">
  <table class="sortable">
    <?php foreach ($statement->fetchAll(PDO::FETCH_ASSOC) as $row): ?>
      <tr>
        <?php foreach ($row as $element): ?>
          <td><?php echo $element ?></td>
        <?php endforeach; ?>
      </tr>
    <?php endforeach; ?>
  </table>
</div>
<div>
  <?php switch($variable):
  case 1: ?>
      <div>Newspage</div>
      <?php break; ?>
  <?php case 2: ?>
      </div>Forum<div>
  <?php break; ?>
  <?php endswitch; ?>
</div>
<ul>
  <?php for($i=1;$i<=5;$i++){ ?>
      <li>Menu Item <?php echo $i; ?></li>
  <?php } ?>
</ul>
<?php while(true): ?>
  <span>Text</span>
<?php endwhile; ?>
<h1>Head</h1>
<?php $var = 1; ?>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php $var = 1; ?>
<div>
  <?php while ($i <= 10): ?>
    <span><?php echo $i; ?></span>
    <?php $i++; ?>
  <?php endwhile; ?>
</div>
<div>
  <?php if($a > $b): ?>
    <span><?php echo $a." > ".$b;?></span>
  <?php elseif($a == $b): ?>
    <span><?php echo $a." == ".$b; ?></span>
  <?php else: ?>
    <span><?php echo $a." < ".$b; ?></span>
  <?php endif; ?>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<p>Test.</p>
<?php echo 'String.'; ?>
<p>Test.</p>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php echo '<input type="hidden" value="' . htmlspecialchars($data) . '" />'; ?>
<div></div>
<?php
echo 'foo';
echo 'bar';
?>
<div class="<?php echo $class; ?>"></div>
<div>
  <h1>
    <?php print_welcome_message(); ?>
  </h1>
</div>
<div id="results">
  <table class="sortable">
    <?php $results = $statement->fetchAll(PDO::FETCH_ASSOC); ?>
    <?php do { ?>
      <tr>
        <?php for ($i = 0; $i < count($columns); $i++): ?>
          <td><?php echo $row[$i]; ?></td>
        <?php endfor; ?>
      </tr>
    <?php } while (($row = next($results)) != false); ?>
  </table>
</div>
<div id="results">
  <table class="sortable">
    <?php foreach ($statement->fetchAll(PDO::FETCH_ASSOC) as $row): ?>
      <tr>
        <?php foreach ($row as $element): ?>
          <td><?php echo $element; ?></td>
        <?php endforeach; ?>
      </tr>
    <?php endforeach; ?>
  </table>
</div>
<div>
  <?php switch ($variable): case 1: ?>
      <div>Newspage</div>
      <?php break; ?>
  <?php case 2: ?>
      </div>Forum<div>
  <?php break; ?>
  <?php endswitch; ?>
</div>
<ul>
  <?php for ($i = 1; $i <= 5; $i++) { ?>
      <li>Menu Item <?php echo $i; ?></li>
  <?php } ?>
</ul>
<?php while (true): ?>
  <span>Text</span>
<?php endwhile; ?>
<h1>Head</h1>
<?php $var = 1; ?>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php $var = 1; ?>
<div>
  <?php while ($i <= 10): ?>
    <span><?php echo $i; ?></span>
    <?php $i++; ?>
  <?php endwhile; ?>
</div>
<div>
  <?php if ($a > $b): ?>
    <span><?php echo $a . " > " . $b; ?></span>
  <?php elseif ($a == $b): ?>
    <span><?php echo $a . " == " . $b; ?></span>
  <?php else: ?>
    <span><?php echo $a . " < " . $b; ?></span>
  <?php endif; ?>
</div>

`;

exports[`mixed-1.php - php-verify: mixed-1.php 1`] = `
<?php
$a = 1;
?>
<div>Foo</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$a = 1; ?>
<div>Foo</div>

`;

exports[`mixed-2.php - php-verify: mixed-2.php 1`] = `
<div>Foo</div>
<?php
$a = 1;
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Foo</div>
<?php $a = 1;
?>

`;

exports[`mixed-3.php - php-verify: mixed-3.php 1`] = `
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
<div>Hello world</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
<div>Hello world</div>

`;

exports[`mixed-4.php - php-verify: mixed-4.php 1`] = `
<div>Hello world</div>
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Hello world</div>
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>

`;

exports[`mixed-5.php - php-verify: mixed-5.php 1`] = `
text
<?php
if (!empty($dataXXXXXXXXXXXXXXXXXXXX)) {
    foreach ($dataXXXXXXXXXXXXXXXXXXXX as $key => $value) {
        if ((!is_string($value) && !is_numeric($value)) || !is_string($key)) {
            continue;
        }
        if (get_magic_quotes_gpc()) {
            $value = htmlspecialchars(stripslashes((string) $value));
        } else {
            $value = htmlspecialchars((string) $value);
        }
    }
}
?>
text~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
text
<?php if (!empty($dataXXXXXXXXXXXXXXXXXXXX)) {
    foreach ($dataXXXXXXXXXXXXXXXXXXXX as $key => $value) {
        if ((!is_string($value) && !is_numeric($value)) || !is_string($key)) {
            continue;
        }
        if (get_magic_quotes_gpc()) {
            $value = htmlspecialchars(stripslashes((string) $value));
        } else {
            $value = htmlspecialchars((string) $value);
        }
    }
} ?>
text
`;

exports[`mixed-6.php - php-verify: mixed-6.php 1`] = `
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php
      echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary',
      ]);
    ?>
  </header>
</section>

<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php
      echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary',
      ]);
    ?>
  </header> <?= $someOtherVar()->element('collection/item-title', [
    'class' => $itemTitleClass,
    'small_title' => $item->small_title,
    'title' => $item->title,
    'url' => $url,
    'color' => $item->title_color ?: 'primary',
  ]); ?>
</section>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<section class="<?= $sectionClass; ?>">
  <header class="<?= $headerClass; ?>">
    <?php echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary'
    ]); ?>
  </header>
</section>

<section class="<?= $sectionClass; ?>">
  <header class="<?= $headerClass; ?>">
    <?php echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary'
    ]); ?>
  </header> <?= $someOtherVar()->element('collection/item-title', [
      'class' => $itemTitleClass,
      'small_title' => $item->small_title,
      'title' => $item->title,
      'url' => $url,
      'color' => $item->title_color ?: 'primary'
  ]); ?>
</section>

`;

exports[`mixed-7.php - php-verify: mixed-7.php 1`] = `
There are <?= $variable; ?> examples

There are <?php echo $variable; ?> examples
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
There are <?= $variable; ?> examples

There are <?php echo $variable; ?> examples

`;

exports[`mixed-8.php - php-verify: mixed-8.php 1`] = `
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

<div>
    <?php echo "1"; echo "2"; ?>
</div>

<div>
  <?php echo "1"; ?>
  <?php echo "2"; ?>
</div>

<div>
    <?php function func($x){
        return $x;
    }
    function other_func($x){
        return $x;
    } ?>
</div>

<div>
    <?php function func($x){
        return $x;
    } ?>
    <?php function other_func($x){
        return $x;
    } ?>
</div>

<div>
    <?php echo "1"; ?>
</div>
<div>
    <?php
    echo "1";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    echo "5";
    ?>
</div>
<div>
  <div>
    <div>
      <div>
          <?php echo "1"; ?>
      </div>
    </div>
  </div>
</div>
<div>
  <div>
    <div>
      <div>
          <?php
          echo "1";
          echo "2";
          ?>
      </div>
    </div>
  </div>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

<div>
  <?php echo "1"; ?>
  <?php echo "2"; ?>
</div>

<div>
    <?php
    function func($x)
    {
        return $x;
    }
    function other_func($x)
    {
        return $x;
    }
    ?>
</div>

<div>
    <?php function func($x)
    {
        return $x;
    } ?>
    <?php function other_func($x)
    {
        return $x;
    } ?>
</div>

<div>
    <?php echo "1"; ?>
</div>
<div>
    <?php echo "1"; ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    echo "5";
    ?>
</div>
<div>
  <div>
    <div>
      <div>
          <?php echo "1"; ?>
      </div>
    </div>
  </div>
</div>
<div>
  <div>
    <div>
      <div>
          <?php
          echo "1";
          echo "2";
          ?>
      </div>
    </div>
  </div>
</div>

`;

exports[`mixed-9.php - php-verify: mixed-9.php 1`] = `
<?php echo '1'; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>

`;

exports[`mixed-10.php - php-verify: mixed-10.php 1`] = `
<?php echo '1';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1';

`;

exports[`mixed-11.php - php-verify: mixed-11.php 1`] = `
<?php echo '1'; ?>
<?php echo '2'; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>
<?php echo '2'; ?>

`;

exports[`mixed-12.php - php-verify: mixed-12.php 1`] = `
<?php echo '1'; ?>
<?php echo '2';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>
<?php echo '2';

`;

exports[`mixed-13.php - php-verify: mixed-13.php 1`] = `
<?php echo '1'; ?>
<?php echo '2'; ?>
<?php echo '3'; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>
<?php echo '2'; ?>
<?php echo '3'; ?>

`;

exports[`mixed-14.php - php-verify: mixed-14.php 1`] = `
<?php echo '1'; ?>
<?php echo '2'; ?>
<?php echo '3';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>
<?php echo '2'; ?>
<?php echo '3';

`;

exports[`mixed-15.php - php-verify: mixed-15.php 1`] = `
<?php
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

`;

exports[`mixed-16.php - php-verify: mixed-16.php 1`] = `
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
  <?php echo $someOtherVar()->element('collection/item-title', [
      'class' => $itemTitleClass,
      'small_title' => $item->small_title,
      'title' => $item->title,
      'url' => $url,
      'color' => $item->title_color ?: 'primary',
  ], [
      'foo' => 'bar',
      'bar' => 'foo',
      'barfoo' => 'foobar',
      'foobar' => 'barfoo'
  ]); ?>
  </header>
  <div> <?php echo $someOtherVar()->element('collection/item-title', [
      'class' => $itemTitleClass,
      'small_title' => $item->small_title,
      'title' => $item->title,
      'url' => $url,
      'color' => $item->title_color ?: 'primary',
  ], [
      'foo' => 'bar',
      'bar' => 'foo',
      'barfoo' => 'foobar',
      'foobar' => 'barfoo'
  ]); ?>
  </div>
</section>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<section class="<?= $sectionClass; ?>">
  <header class="<?= $headerClass; ?>">
  <?php echo $someOtherVar()->element(
      'collection/item-title',
      [
          'class' => $itemTitleClass,
          'small_title' => $item->small_title,
          'title' => $item->title,
          'url' => $url,
          'color' => $item->title_color ?: 'primary'
      ],
      [
          'foo' => 'bar',
          'bar' => 'foo',
          'barfoo' => 'foobar',
          'foobar' => 'barfoo'
      ]
  ); ?>
  </header>
  <div> <?php echo $someOtherVar()->element(
      'collection/item-title',
      [
          'class' => $itemTitleClass,
          'small_title' => $item->small_title,
          'title' => $item->title,
          'url' => $url,
          'color' => $item->title_color ?: 'primary'
      ],
      [
          'foo' => 'bar',
          'bar' => 'foo',
          'barfoo' => 'foobar',
          'foobar' => 'barfoo'
      ]
  ); ?>
  </div>
</section>

`;

exports[`mixed-17.php - php-verify: mixed-17.php 1`] = `
<div>
    <?php switch($variable) {
    case 1: ?>
        <div>Newspage</div>
        <?php break; ?>
    <?php case 2: ?>
    <div>Forum</div>
    <?php break; ?>
    <?php } ?>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
    <?php switch ($variable) { case 1: ?>
        <div>Newspage</div>
        <?php break; ?>
    <?php case 2: ?>
    <div>Forum</div>
    <?php break; ?>
    <?php } ?>
</div>

`;

exports[`mixed-18.php - php-verify: mixed-18.php 1`] = `
<div>
    <?php

    echo '1';
    echo '2';

    ?>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
    <?php
    echo '1';
    echo '2';
    ?>
</div>

`;

exports[`mixed-19.php - php-verify: mixed-19.php 1`] = `
<?php
$greet = function($name) {
    ?>
    FooBar
    <?php
};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$greet = function ($name) {
    ?>
    FooBar
    <?php
};

`;

exports[`mixed-20.php - php-verify: mixed-20.php 1`] = `
<?php
try {
    ?>
    Foo bar
    <?php
} catch (Exception $e) {
    ?>
    Foo bar
    <?php
} finally {
    ?>
    Foo bar
    <?php
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
try {
    ?>
    Foo bar
    <?php
} catch (Exception $e) {
    ?>
    Foo bar
    <?php
} finally {
    ?>
    Foo bar
    <?php
}

`;

exports[`mixed-21.php - php-verify: mixed-21.php 1`] = `
<?php

class Foo
{
    public function html() {
        ?>
        Foo Bar
        <?php
    }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

class Foo
{
    public function html()
    {
        ?>
        Foo Bar
        <?php
    }
}

`;

exports[`mixed-22.php - php-verify: mixed-22.php 1`] = `
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>

`;

exports[`mixed-23.php - php-verify: mixed-23.php 1`] = `
<div>Foo</div>
<?php for ($really_really_long_variable_name = 0; $really_really_long_variable_name <= 5; $really_really_long_variable_name++) { ?>
    <div>
        <?php echo $really_really_long_variable_name; ?>
    </div>
<?php } ?>
<div>Bar</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>Foo</div>
<?php for (
    $really_really_long_variable_name = 0;
    $really_really_long_variable_name <= 5;
    $really_really_long_variable_name++
) { ?>
    <div>
        <?php echo $really_really_long_variable_name; ?>
    </div>
<?php } ?>
<div>Bar</div>

`;

exports[`mixed-24.php - php-verify: mixed-24.php 1`] = `
<?php
declare(ticks=1) {
    echo '1';
}
?>
<div>FooBar</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
declare(ticks=1) {
    echo '1';
} ?>
<div>FooBar</div>

`;

exports[`mixed-25.php - php-verify: mixed-25.php 1`] = `
<?php

$a = 1;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$a = 1;

`;

exports[`mixed-26.php - php-verify: mixed-26.php 1`] = `
<?php

namespace Foo;

echo 'test';
?>
<div>Test</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

namespace Foo;

echo 'test'; ?>
<div>Test</div>

`;

exports[`mixed-27.php - php-verify: mixed-27.php 1`] = `
<?php

declare(strict_types=1);

namespace Foo;

echo 'test';
?>
<div>Test</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

declare(strict_types=1);

namespace Foo;

echo 'test'; ?>
<div>Test</div>

`;

exports[`mixed-28.php - php-verify: mixed-28.php 1`] = `
<?php
echo '1';
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
echo '1';
?>

`;

exports[`mixed-29.php - php-verify: mixed-29.php 1`] = `
<?php echo '1'; ?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>

`;

exports[`mixed-30.php - php-verify: mixed-30.php 1`] = `
<?php echo '1'; ?>
<div> Foo Bar </div>
<?php
echo 'test';
echo 'foo';
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php echo '1'; ?>
<div> Foo Bar </div>
<?php
echo 'test';
echo 'foo';

?>

`;

exports[`mixed-31.php - php-verify: mixed-31.php 1`] = `


<?php echo '1'; ?>

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


<?php echo '1'; ?>


`;

exports[`mixed-32.php - php-verify: mixed-32.php 1`] = `
<div></div>
<?php if (true) ?>
    <?php echo 'test'; ?>
<div></div>
<div></div>
<?php if (true) ?>
<?php echo 'test'; ?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div></div>
<?php if (true); ?>
    <?php echo 'test'; ?>
<div></div>
<div></div>
<?php if (true); ?>
<?php echo 'test'; ?>
<div></div>

`;

exports[`mixed-33.php - php-verify: mixed-33.php 1`] = `
<div></div>
<?php
if (true)
    echo 'test';
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div></div>
<?php if (true) {
    echo 'test';
} ?>
<div></div>

`;

exports[`mixed-34.php - php-verify: mixed-34.php 1`] = `
<div></div>
<?php if (true) echo 'test' ?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div></div>
<?php if (true) {
    echo 'test';
} ?>
<div></div>

`;

exports[`mixed-35.php - php-verify: mixed-35.php 1`] = `
<?php if (!is_ajax()) { ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php

function test()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php
}

function testTwo()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php } ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php } ?>
    <?php } ?>
    <?php
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php if (!is_ajax()) { ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php
function test()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php
}
function testTwo()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php } ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php } ?>
    <?php } ?>
    <?php
}


`;

exports[`mixed-36.php - php-verify: mixed-36.php 1`] = `
<div>
    <div>
        <div>
            <div>
                <input id="payment_method_<?php echo esc_attr($gateway->id); ?>"
                    type="radio"
                    class="input-radio"
                    name="payment_method"
                    value="<?php echo esc_attr($gateway->id); ?>"
                    <?php checked($gateway->chosen, true); ?>
                    data-text="<?php echo esc_attr($gateway->order_button_text); ?>"
            </div>
        </div>
    </div>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
    <div>
        <div>
            <div>
                <input id="payment_method_<?php echo esc_attr($gateway->id); ?>"
                    type="radio"
                    class="input-radio"
                    name="payment_method"
                    value="<?php echo esc_attr($gateway->id); ?>"
                    <?php checked($gateway->chosen, true); ?>
                    data-text="<?php echo esc_attr(
                        $gateway->order_button_text
                    ); ?>"
            </div>
        </div>
    </div>
</div>

`;

exports[`mixed-37.php - php-verify: mixed-37.php 1`] = `
<div>
<?php
func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg');
?>
</div>

<div>
<?php func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg'); ?>
</div>

<div>
<?php
func(
  'verVeryVeryVeryVeryVeryVeryVeryLongArg',
  'verVeryVeryVeryVeryVeryVeryVeryLongArg',
  'verVeryVeryVeryVeryVeryVeryVeryLongArg'
);
?>
</div>

<div>
  <?php
  func(
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg'
  );
  ?>
</div>

<div>
    <?php func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg'); ?>
</div>

<div>
    <?php
    func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg');
    ?>
</div>

<div>
    <?php
    func(
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg'
    );
    ?>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
<?php func(
    'verVeryVeryVeryVeryVeryVeryVeryLongArg',
    'verVeryVeryVeryVeryVeryVeryVeryLongArg',
    'verVeryVeryVeryVeryVeryVeryVeryLongArg'
); ?>
</div>

<div>
<?php func(
    'verVeryVeryVeryVeryVeryVeryVeryLongArg',
    'verVeryVeryVeryVeryVeryVeryVeryLongArg',
    'verVeryVeryVeryVeryVeryVeryVeryLongArg'
); ?>
</div>

<div>
<?php func(
    'verVeryVeryVeryVeryVeryVeryVeryLongArg',
    'verVeryVeryVeryVeryVeryVeryVeryLongArg',
    'verVeryVeryVeryVeryVeryVeryVeryLongArg'
); ?>
</div>

<div>
  <?php func(
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg'
  ); ?>
</div>

<div>
    <?php func(
        'verVeryVeryVeryVeryVeryVeryVeryLongArg',
        'verVeryVeryVeryVeryVeryVeryVeryLongArg',
        'verVeryVeryVeryVeryVeryVeryVeryLongArg'
    ); ?>
</div>

<div>
    <?php func(
        'verVeryVeryVeryVeryVeryVeryVeryLongArg',
        'verVeryVeryVeryVeryVeryVeryVeryLongArg',
        'verVeryVeryVeryVeryVeryVeryVeryLongArg'
    ); ?>
</div>

<div>
    <?php func(
        'verVeryVeryVeryVeryVeryVeryVeryLongArg',
        'verVeryVeryVeryVeryVeryVeryVeryLongArg',
        'verVeryVeryVeryVeryVeryVeryVeryLongArg'
    ); ?>
</div>

`;

exports[`mixed-38.php - php-verify: mixed-38.php 1`] = `
<?php
$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-39.php - php-verify: mixed-39.php 1`] = `
<?php

$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-40.php - php-verify: mixed-40.php 1`] = `
<?php


$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-41.php - php-verify: mixed-41.php 1`] = `
<?php
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

`;

exports[`mixed-42.php - php-verify: mixed-42.php 1`] = `
<?php
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
?>

`;

exports[`mixed-43.php - php-verify: mixed-43.php 1`] = `
<?php

?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
?>

`;

exports[`mixed-44.php - php-verify: mixed-44.php 1`] = `
<?php
declare(strict_types=1);
$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
declare(strict_types=1);
$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-45.php - php-verify: mixed-45.php 1`] = `
<?php

declare(strict_types=1);

$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

declare(strict_types=1);

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-46.php - php-verify: mixed-46.php 1`] = `
<?php


declare(strict_types=1);


$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

declare(strict_types=1);

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-47.php - php-verify: mixed-47.php 1`] = `
<?php
namespace Foo;
$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace Foo;
$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-48.php - php-verify: mixed-48.php 1`] = `
<?php

namespace Foo;

$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

namespace Foo;

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-49.php - php-verify: mixed-49.php 1`] = `
<?php


namespace Foo;


$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

namespace Foo;

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-50.php - php-verify: mixed-50.php 1`] = `
<?php
declare(strict_types=1);
namespace Vendor\\Package;
$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
declare(strict_types=1);
namespace Vendor\\Package;
$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-51.php - php-verify: mixed-51.php 1`] = `
<?php

declare(strict_types=1);

namespace Vendor\\Package;

$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

declare(strict_types=1);

namespace Vendor\\Package;

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`mixed-52.php - php-verify: mixed-52.php 1`] = `
<?php


declare(strict_types=1);


namespace Vendor\\Package;


$var = 1;
$var = 2;
?>
<div></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

declare(strict_types=1);

namespace Vendor\\Package;

$var = 1;
$var = 2;
?>
<div></div>

`;

exports[`only-html.php - php-verify: only-html.php 1`] = `
<!DOCTYPE html>
<html>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
  </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
  </body>
</html>

`;
